<!--
    FILE          : strings.xml
    PROJECT       : PROG3150 - Assignment #2
    PROGRAMMER    : Hoda Akrami, Jessica Sim
    FIRST VERSION : 2020-03-19
    DESCRIPTION   : This file contains the resource of strings
-->
<resources>
    <string name="app_name">Perfect Party</string>
    <string name="events">Events</string>
    <string name="event1">Event Name</string>
    <string name="createBtn">CREATE</string>
    <string name="SAVE">SAVE</string>
    <string name="eventName">Event Name</string>
    <string name="createEvent">Create Event</string>
    <string name="vDateEnter">Enter</string>
    <string name="address">Address</string>
    <string name="edit">EDIT</string>
    <string name="add_guests">ADD GUESTS</string>
    <string name="list_of_guests">List of Guests</string>
    <string name="click_to_choose_menu">Click to Choose Menu</string>
    <string name="list_of_menu">List of Menu</string>
    <string name="click_to_choose_suppliers">Click to choose suppliers</string>
    <string name="list_of_supplies">List of Supplies</string>
    <string name="event_type">Event Type:</string>
    <string name="event_name">Event Name</string>
    <string name="event_id">Event ID</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string-array name="event_type_spinner">
        <item>Birthday</item>
        <item>New Year</item>
        <item>Graduation</item>
        <item>Halloween</item>
        <item>Festival</item>
        <item>Others</item>
    </string-array>
    <string name="menuTextView">Menu</string>
    <string name="checkbox_drink">Drink</string>
    <string name="checkbox_appetizer">Appetizer</string>
    <string name="checkbox_mainDish">Main Dish</string>
    <string name="checkbox_dessert">Dessert</string>
    <string name="saveBtn">SAVE</string>
    <string name="backBtn">BACK</string>
    <string name="supplyTextView">Supplies</string>
    <string name="checkbox_balloons">Balloons</string>
    <string name="checkbox_cake">Cake</string>
    <string name="checkbox_flowers">Flowers</string>
    <string name="checkbox_cups">Cups</string>
    <string name="checkbox_cutlery">Cutlery</string>
    <string name="checkbox_candle">Candle</string>
    <string name="checkbox_invitations">Invitations</string>
    <string name="linkTextView">Order your menu from Sobeys</string>
    <string name="suppliesLinkTextView">Order your supplies from Amazon</string>
    <string name="log_out">Log Out</string>
    <string name="about">About</string>
    <string name="backDetailsBtn">EVENT DETAILS</string>
    <string name="saveUpdateBtn">SAVE UPDATE</string>
    <string name="title_activity_maps">Map</string>


</resources>