<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/menuTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="40sp"
        android:text="@string/menuTextView"
        android:textColor="@color/pink"
        android:textSize="40sp"
        android:textStyle="bold" />

    <CheckBox android:id="@+id/checkbox_drink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_drink"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_appetizer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_appetizer"
        android:onClick="onCheckboxClicked"/>

</RelativeLayout>